<resources>
    <string name="app_name">Cultura BCN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_mensajes">Mensajes</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_informacion">Información</string>
    <string name="menu_contacto">Contacto</string>
    <string name="saltar">Saltar</string>
    <string name="continuar">Continuar</string>
    <string name="descobreix_la_nbarcelona_cultural">Descobreix la\nBarcelona cultural</string>
    <string name="troba_esdeveniments_nics_a_l_edifici_de_la_cultura_ndes_de_concerts_ntims_fins_a_exposicions_d_art_modern">Troba esdeveniments únics a l\'Edifici de la Cultura.\nDes de concerts íntims fins a exposicions d\'art modern.</string>
    <string name="crea_esdeveniments_nque_fascinaran">Crea esdeveniments\nque fascinaran</string>
    <string name="gestiona_reserves_d_espais_publica_esdeveniments_ni_controla_l_aforament_amb_un_sol_clic">Gestiona reserves d\'espais, publica esdeveniments\ni controla l\'aforament amb un sol clic.</string>
    <string name="experi_ncia_interactiva_nen_temps_real">Experiència interactiva\nen temps real</string>
    <string name="xateja_amb_assistents_tria_la_teva_butaca_npreferida_i_comparteix_moments_amb_la_comunitat">Xateja amb assistents, tria la teva butaca\npreferida i comparteix moments amb la comunitat.</string>
    <string name="benvingut_a_ncultura_bcn">Benvingut a\nCULTURA BCN</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvidada">OLVIDADA</string>
    <string name="por_favor_inicia_sesi_n_para_continuar">Por favor, inicia sesión para continuar.</string>
    <string name="iniciar">iniciar</string>
    <string name="no_tienes_cuenta">No tienes cuenta?</string>
    <string name="registrate">REGISTRATE</string>
    <string name="recuperaci_n">Recuperación</string>
    <string name="te_has_olvidado_de_tu_contrase_a">Te has olvidado de tu contraseña?</string>
    <string name="recuperar">Recuperar</string>
    <string name="necesitas_ayuda">Necesitas ayuda?</string>
    <string name="www_barcelona_cat">www.barcelona.cat</string>
    <string name="por_favor_registrate_para_continuar">Por favor, registrate para continuar.</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta? </string>
    <string name="descripci_n">"Descripción: "</string>
    <string name="lugar">"Lugar: "</string>
    <string name="precio">"Precio: "</string>
    <string name="fecha">"Fecha: "</string>
    <string name="hora">Hora:</string>
    <string name="cancelar">CANCELAR</string>
    <string name="aforo">"Aforo: "</string>
    <string name="edad_m_nima">"Edad mínima: "</string>
    <string name="reservar">RESERVAR</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento: </string>
    <string name="edad">"Edad: "</string>
    <string name="correo">"Correo: "</string>
    <string name="tel_fono">"Teléfono: "</string>
    <string name="reserves">Reserves</string>
    <string name="editar">Editar</string>
    <string name="faqs_preguntas_frecuentes">FAQs (Preguntas Frecuentes)</string>
    <string name="_1_c_mo_puedo_reservar_entradas_para_un_evento">1. ¿Cómo puedo reservar entradas para un evento?</string>
    <string name="puedes_reservar_tus_entradas_directamente_desde_la_aplicaci_n_seleccionando_el_evento_de_tu_inter_s_en_la_secci_n_de_eventos_y_siguiendo_los_pasos_para_completar_tu_reserva_aseg_rate_de_tener_una_cuenta_en_la_aplicaci_n_para_poder_finalizar_la_reserva">Puedes reservar tus entradas directamente desde la aplicación, seleccionando el evento de tu interés en la sección de eventos y siguiendo los pasos para completar tu reserva. Asegúrate de tener una cuenta en la aplicación para poder finalizar la reserva.</string>
    <string name="_2_es_necesario_crear_una_cuenta_para_usar_la_aplicaci_n">2. ¿Es necesario crear una cuenta para usar la aplicación?</string>
    <string name="no_es_necesario_crear_una_cuenta_para_navegar_por_la_aplicaci_n_y_ver_los_eventos_pero_s_debes_registrarte_si_deseas_realizar_reservas_tener_una_cuenta_tambi_n_te_permitir_recibir_notificaciones_sobre_nuevos_eventos_y_ofertas_especiales">No es necesario crear una cuenta para navegar por la aplicación y ver los eventos, pero sí debes registrarte si deseas realizar reservas. Tener una cuenta también te permitirá recibir notificaciones sobre nuevos eventos y ofertas especiales.</string>
    <string name="_3_puedo_cancelar_o_modificar_mi_reserva">3. ¿Puedo cancelar o modificar mi reserva?</string>
    <string name="s_puedes_cancelar_o_modificar_tu_reserva_desde_la_secci_n_de_mis_reservas_dentro_de_la_aplicaci_n_ten_en_cuenta_que_algunos_eventos_pueden_tener_pol_ticas_espec_ficas_sobre_cambios_y_cancelaciones_por_lo_que_te_recomendamos_revisar_los_t_rminos_al_realizar_la_reserva">Sí, puedes cancelar o modificar tu reserva desde la sección de \'Mis Reservas\' dentro de la aplicación. Ten en cuenta que algunos eventos pueden tener políticas específicas sobre cambios y cancelaciones, por lo que te recomendamos revisar los términos al realizar la reserva.</string>
    <string name="_4_el_edificio_es_accesible_para_personas_con_movilidad_reducida">4. ¿El edificio es accesible para personas con movilidad reducida?</string>
    <string name="s_el_edificio_est_completamente_adaptado_para_personas_con_movilidad_reducida_contamos_con_accesos_especiales_ascensores_y_ba_os_adaptados_si_necesitas_asistencia_adicional_no_dudes_en_contactarnos_a_trav_s_de_la_secci_n_de_contacto_de_la_aplicaci_n">Sí, el edificio está completamente adaptado para personas con movilidad reducida. Contamos con accesos especiales, ascensores, y baños adaptados. Si necesitas asistencia adicional, no dudes en contactarnos a través de la sección de contacto de la aplicación.</string>
    <string name="_5_c_mo_llego_al_edificio">5. ¿Cómo llego al edificio?</string>
    <string name="puedes_encontrar_la_ubicaci_n_exacta_y_un_mapa_interactivo_en_la_secci_n_de_informaci_n_de_la_aplicaci_n_adem_s_si_tienes_dudas_sobre_el_transporte_p_blico_o_las_mejores_rutas_tambi_n_te_ofrecemos_informaci_n_detallada_para_facilitar_tu_llegada">Puedes encontrar la ubicación exacta y un mapa interactivo en la sección de Información de la aplicación. Además, si tienes dudas sobre el transporte público o las mejores rutas, también te ofrecemos información detallada para facilitar tu llegada.</string>
    <string name="direcci_n">Dirección:</string>
    <string name="edifici_cultural_can_many_ncarrer_de_mallorca_401_08013_barcelona">Edifici Cultural Can Manyé\nCarrer de Mallorca, 401, 08013 Barcelona</string>
    <string name="atenci_n_telef_nica">Atención telefónica:</string>
    <string name="tel_general_932_123_456_nhorario_de_lunes_a_viernes_de_9_00_a_18_00_h">Tel. general: 932 123 456\nHorario: de lunes a viernes, de 9:00 a 18:00 h</string>
    <string name="contacte_barcelona_cat_neventos_cultura_barcelona_cat">contacte@barcelona.cat\neventos.cultura@barcelona.cat</string>
    <string name="redes_sociales">Redes sociales:</string>
    <string name="contacta_con_nosotros">Contacta con nosotros</string>
    <string name="seleccionar_un_idioma">Seleccionar un idioma</string>
    <string name="crear_evento">Crear Evento</string>
    <string name="nombre">Nombre</string>
    <string name="descripci_n_sin_puntos">Descripción</string>
    <string name="fecha_sin_puntos">Fecha</string>
    <string name="hora_sin_puntos">Hora Inicio</string>
    <string name="sala_sin_puntos">Sala</string>
    <string name="numeradas">Numeradas</string>
    <string name="filas">Filas</string>
    <string name="columnas">Columnas</string>
    <string name="aforo_sin_puntos">Aforo</string>
    <string name="precio_sin_puntos">Precio</string>
    <string name="edad_m_nima_sin_puntos">Edad Mínima</string>
    <string name="crear">Crear</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="cambiar">Cambiar</string>
    <string name="nombre_con_puntos">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="correo_con_puntos">Correo:</string>
    <string name="telefono_con_puntos">Telefono:</string>
    <string name="fecha_de_nacimiento_con_puntos">Fecha de nacimiento:</string>
    <string name="confirmar">Confirmar</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="usuario_gestor">Usuario Gestor</string>
    <string name="apellidos_sin_puntos">Apellidos</string>
    <string name="correo_sin_puntos">Correo</string>
    <string name="fecha_de_nacimiento_sin_puntos">Fecha de nacimiento</string>
    <string name="tel_fono_sin_puntos">Teléfono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="hora_fin">Hora Fin</string>
    <string name="lugar_sin_puntos">Lugar</string>
    <string name="buscar">Buscar</string>
    <string name="el_nombre_no_puede_estar_vac_o">El nombre no puede estar vacío.</string>
    <string name="los_apellidos_no_pueden_estar_vac_os">Los apellidos no pueden estar vacíos.</string>
    <string name="el_correo_no_puede_estar_vac_o">El correo no puede estar vacío.</string>
    <string name="introduce_un_formato_de_correo_v_lido">Introduce un formato de correo válido.</string>
    <string name="la_fecha_de_nacimiento_no_puede_estar_vac_a">La fecha de nacimiento no puede estar vacía.</string>
    <string name="el_telefono_no_puede_estar_vac_o">El telefono no puede estar vacío.</string>
    <string name="error_datos_del_usuario_incompletos">Error: Datos del usuario incompletos.</string>
    <string name="error_interno_no_se_puede_obtener_la_imagen_para_actualizarla">Error interno: No se puede obtener la imagen para actualizarla.</string>
    <string name="perfil_actualizado">Perfil actualizado!</string>
    <string name="error_de_conexi_n_actualizando_el_perfil">Error de conexión actualizando el perfil.</string>
    <string name="correo_y_o_contrase_a_incorrectos">Correo y/o contraseña incorrectos.</string>
    <string name="inicio_de_sesi_n_con_xito">Inicio de sesión con éxito</string>
    <string name="error_de_conexi_n">Error de conexión</string>
    <string name="correo_o_contrase_a_vac_os">Correo o contraseña vacíos</string>
    <string name="el_telefono_solamente_puede_contener_n_meros">El telefono solamente puede contener números.</string>
</resources>