<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.culturabcn.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.culturabcn.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_mensajes"
        android:name="com.example.culturabcn.ui.mensajes.MensajesFragment"
        android:label="@string/menu_mensajes"
        tools:layout="@layout/fragment_mensajes" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.example.culturabcn.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/nav_informacion"
        android:name="com.example.culturabcn.ui.informacion.InformacionFragment"
        android:label="@string/menu_informacion"
        tools:layout="@layout/fragment_informacion" />

    <fragment
        android:id="@+id/nav_contacto"
        android:name="com.example.culturabcn.ui.contacto.ContactoFragment"
        android:label="@string/menu_contacto"
        tools:layout="@layout/fragment_configuracion" />

    <fragment
        android:id="@+id/crearFragment"
        android:name="com.example.culturabcn.ui.crear.CrearFragment"
        android:label="Crear Evento"
        tools:layout="@layout/fragment_crear" />

</navigation>