<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="20dp"
    tools:context=".ui.informacion.InformacionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Título de la sección -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/contacta_con_nosotros"
            android:textAlignment="center"
            android:textColor="@color/rojo_claro"
            android:textSize="28sp"
            android:textStyle="bold" />

        <!-- Dirección -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/direcci_n"
            android:textColor="@color/rojo_claro"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edifici_cultural_can_many_ncarrer_de_mallorca_401_08013_barcelona"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!-- Mapa -->

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:clickable="true"
            android:focusable="true" />

        <!-- Teléfono -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/atenci_n_telef_nica"
            android:textColor="@color/rojo_claro"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tel_general_932_123_456_nhorario_de_lunes_a_viernes_de_9_00_a_18_00_h"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!-- Correo -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/correo"
            android:textColor="@color/rojo_claro"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacte_barcelona_cat_neventos_cultura_barcelona_cat"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!-- Redes sociales -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:text="@string/redes_sociales"
            android:textColor="@color/rojo_claro"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Iconos de Redes Sociales -->
            <ImageView
                android:id="@+id/btnInstagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_instagram" />

            <ImageView
                android:id="@+id/btnTwitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="25dp"
                android:src="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/btnAjuntament"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_ajuntament" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
