<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_login">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="25dp"
        android:src="@drawable/arrow_back" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:src="@drawable/background_login_logo" />

    <ImageView
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_gravity="right"
        android:layout_margin="12dp"
        android:src="@drawable/logo_aj_bcn_largo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/recuperaci_n"
            android:textColor="@color/white"
            android:textSize="42dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/te_has_olvidado_de_tu_contrase_a"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="120dp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@color/rojo_oscuro" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecuperar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:background="@drawable/degradado_button"
            android:minHeight="0dp"
            android:paddingTop="0dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="55dp"
            android:paddingBottom="0dp"
            android:text="@string/recuperar"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/necesitas_ayuda"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/www_barcelona_cat"
            android:textColor="@color/rojo_claro"
            android:textStyle="bold
" />
    </LinearLayout>
</FrameLayout>