<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreEvento"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/rojo_claro"
            android:gravity="center | left"
            android:paddingLeft="20dp"
            android:text="@string/editar_perfil"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPerfilDialog"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/side_nav_bar"
            app:shapeAppearanceOverlay="@style/CircularImage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCambiarImg"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/degradado_button"
            android:minHeight="0dp"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="@string/cambiar"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

        <!-- Nombre -->
        <LinearLayout
            android:paddingHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_con_puntos"
                android:textColor="@color/rojo_claro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Apellidos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos"
                android:textColor="@color/rojo_claro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>


        <!-- Correo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingHorizontal="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_con_puntos"
                android:textColor="@color/rojo_claro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Telefono -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono_con_puntos"
                android:textColor="@color/rojo_claro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </LinearLayout>

        <!-- Fecha Nacimiento -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_de_nacimiento_con_puntos"
                android:textColor="@color/rojo_claro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0.9"
                android:background="@drawable/degradado_button_oscuro"
                android:minWidth="120dp"
                android:text="@string/cancelar"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirmar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="0.9"
                android:background="@drawable/degradado_button"
                android:minWidth="120dp"
                android:text="@string/confirmar"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@null" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
